--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "next": "15.5.0",
+    "postcss-simple-vars": "^7.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@svgr/webpack": "^8.1.0",
     "@types/next": "^8.0.7",
     "@types/node": "^20.19.11",
     "@types/react": "^19",
