test: add Header component tests and testing setup

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,3 +28,5 @@
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts","next.config.js", "svgr.d.ts"],
   "exclude": ["node_modules"]
 }
+
+/// <reference types="@testing-library/jest-dom" />
