feat: update dependencies and remove unused files
- Added  and  dependencies in package.json.
- Deleted unused HTML files:  and .
- Removed unused image assets related to recipes.
- Updated the About page component for better formatting.
- Refactored the Recipes page to include parameters in the recipe list.
- Enhanced the CallToActionSection and Header components to link to the recipes page.
- Improved the HeroSection with a link to the recipes page.
- Updated RecipeCard component to include structured data for SEO.
- Introduced RecipeJsonLd component for structured data representation of recipes.
- Enhanced RecipeTimeInfoComponent with item properties for better SEO.
- Updated styles for recipe cards and forms for improved layout.
- Removed deprecated FatSecret API utility functions.
- Added new SVG icons for servings and time information.

--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "benchmark": "^2.1.4",
     "next": "15.5.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sharp": "^0.34.4"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -37,5 +39,4 @@
     "ts-node": "^10.9.2",
     "typescript": "^5"
   }
-
 }
