--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "postcss-simple-vars": "^7.0.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "sharp": "^0.34.4"
+    "swr": "^2.3.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
