--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20.19.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "critters": "^0.0.23",
     "eslint": "^9",
     "eslint-config-next": "15.5.0",
     "eslint-plugin-import": "^2.32.0",
