final commit everthing is done

--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "benchmark": "^2.1.4",
+    "@bprogress/next": "^3.2.12",
     "next": "15.5.0",
     "postcss-simple-vars": "^7.0.1",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "swr": "^2.3.6"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
